quarta animacao, animacao da estrela e orientation landscape utilizando, iniciando BugSquash

--- a/johnatas-henrique/css/style.css
+++ b/johnatas-henrique/css/style.css
@@ -120,6 +120,10 @@ a:hover {
   margin-right: 1em;
 }
 
+.w-10 {
+  width: 8%;
+}
+
 .w-25 {
   width: 25%;
 }
@@ -414,151 +418,201 @@ a:hover {
   cursor: pointer;
 }
 
-@media screen and (min-width: 761px) {
+.star-animation {
+  position: absolute;
+  left: 46%;
+  top: 2.6%;
+  transform: rotateZ(45deg);
+  z-index: 3;
+  cursor: pointer;
+}
 
-  .alinha-menu {
+@media screen and (max-width: 760px) and (orientation: landscape) {
+
+  .daily-comp,
+  .daily-comp-button,
+  .aside-title {
+    background-color: brown;
+  }
+
+  .pomo-animation,
+  .star-animation {
     display: none;
   }
 
-  .navbar-ulist {
-    display: flex;
-    justify-content: center;
-    margin-top: 0.5em;
-  }
+  @media screen and (min-width: 761px) {
 
-  .navbar-ulist li {
-    margin: 0 0.75em;
-    display: inline-block;
-    border-bottom: none;
-  }
+    .alinha-menu {
+      display: none;
+    }
 
-  .navbar-ulist a {
-    font-size: 3vw;
-  }
+    .navbar-ulist {
+      display: flex;
+      justify-content: center;
+      margin-top: 0.5em;
+    }
 
-  .flex-col-1 {
-    flex: 35%;
-    max-width: 35%;
-  }
+    .navbar-ulist li {
+      margin: 0 0.75em;
+      display: inline-block;
+      border-bottom: none;
+    }
 
-  .flex-col-2 {
-    flex: 65%;
-    max-width: 65%;
-  }
+    .navbar-ulist a {
+      font-size: 3vw;
+    }
 
-  .main-lead-1 {
-    padding-left: 0.75em;
-  }
+    .flex-col-1 {
+      flex: 35%;
+      max-width: 35%;
+    }
 
-  .main-lead-2,
-  .main-lead-3 {
-    column-count: 2;
-  }
+    .flex-col-2 {
+      flex: 65%;
+      max-width: 65%;
+    }
 
-  .broom-lead-1 {
-    padding-left: 0.75em;
-  }
+    .main-lead-1 {
+      padding-left: 0.75em;
+    }
 
-  .pomo-animation {
-    transform: translate(-12%, 47%);
-    animation: pomo 10s linear 3s 3 alternate forwards;
-  }
+    .main-lead-2,
+    .main-lead-3 {
+      column-count: 2;
+    }
 
-  .pomo-animation:hover {
-    animation-play-state: paused;
-    cursor: pointer;
-  }
+    .broom-lead-1 {
+      padding-left: 0.75em;
+    }
 
-  @keyframes pomo {
-    0% {
+    .pomo-animation {
       transform: translate(-12%, 47%);
+      animation: pomo 10s linear 3s 3 alternate forwards;
     }
 
-    45% {
-      transform: translate(255%, 93%);
+    .pomo-animation:hover {
+      animation-play-state: paused;
+      cursor: pointer;
     }
 
-    50% {
-      transform: translate(284%, 88%);
+    @keyframes pomo {
+      0% {
+        transform: translate(-12%, 47%);
+      }
+
+      45% {
+        transform: translate(255%, 93%);
+      }
+
+      50% {
+        transform: translate(284%, 88%);
+      }
+
+      60% {
+        transform: translate(322%, 51%);
+      }
+
+      75% {
+        transform: translate(331%, -21%);
+      }
+
+      87.5% {
+        transform: translate(155%, -3%);
+      }
+
+      93% {
+        transform: translate(224%, 7%);
+      }
+
+      100% {
+        transform: translate(241%, -17%);
+      }
     }
 
-    60% {
-      transform: translate(322%, 51%);
+    .broom-animation {
+      animation: broom 5s linear 1 forwards;
     }
 
-    75% {
-      transform: translate(331%, -21%);
+    @keyframes broom {
+      0% {
+        transform: scale(1.0, 1.0);
+      }
+
+      12.5% {
+        transform: scale(2.0, 2.0);
+      }
+
+      25% {
+        transform: rotate(45deg);
+      }
+
+      37.5% {
+        transform: rotate(360deg);
+      }
+
+      50% {
+        transform: translate(0, -20%);
+      }
+
+      62.5% {
+        transform: translate(0, 20%);
+      }
+
+      75% {
+        transform: scaleX(-1) skew(-60deg);
+      }
+
+      87.5% {
+        transform: rotate(45deg);
+      }
+
+      100% {
+        transform: translate(4000px, -2000px);
+      }
     }
 
-    87.5% {
-      transform: translate(155%, -3%);
+    .text-animation {
+      animation: texto 4s linear forwards;
     }
 
-    93% {
-      transform: translate(224%, 7%);
+    @keyframes texto {
+      0% {
+        transform: scale(1.0, 1.0);
+        font-weight: 400;
+      }
+
+      100% {
+        transform: scale(1.5, 1.5);
+        font-weight: 700;
+      }
     }
 
-    100% {
-      transform: translate(241%, -17%);
-    }
-  }
-
-  .broom-animation {
-    animation: broom 5s linear 1 forwards;
-  }
-
-  @keyframes broom {
-    0% {
-      transform: scale(1.0, 1.0);
+    .star-animation {
+      animation: estrela 4s linear infinite forwards;
     }
 
-    12.5% {
-      transform: scale(2.0, 2.0);
+    @keyframes estrela {
+      0% {
+        transform: scale(1.0, 1.0) rotateZ(0deg);
+      }
+
+      30% {
+        transform: rotateZ(360deg) rotateX(180deg);
+      }
+
+      45% {
+        transform: translateX(40vw) translateY(8vh);
+      }
+
+      60% {
+        transform: translateX(-40vw) translateY(-15vh);
+      }
+
+      80% {
+        transform: translateY(-20vh) scale(3, 3);
+      }
+
+      100% {
+        transform: scale(1.0, 1.0) rotateZ(540deg);
+      }
     }
-
-    25% {
-      transform: rotate(45deg);
-    }
-
-    37.5% {
-      transform: rotate(360deg);
-    }
-
-    50% {
-      transform: translate(0, -20%);
-    }
-
-    62.5% {
-      transform: translate(0, 20%);
-    }
-
-    75% {
-      transform: scaleX(-1) skew(-60deg);
-    }
-
-    87.5% {
-      transform: rotate(45deg);
-    }
-
-    100% {
-      transform: translate(4000px, -2000px);
-    }
-  }
-
-  .text-animation {
-    animation: texto 4s linear alternate forwards;
-  }
-
-  @keyframes texto {
-    0% {
-      transform: scale(1.0, 1.0);
-      font-weight: 400;
-    }
-
-    100% {
-      transform: scale(1.5, 1.5);
-      font-weight: 700;
-    }
-  }
-
-}
